# FastAPI

./: .gitignore  Dockerfile  Dockerfile.cloud  Dockerfile.local  bs.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  translate.py
.github/workflows/: AutoDeploy.yml
ai/: emotion.py  summary.py
api/: main.py
