[tool.poetry]
name = "sentifl-demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
requests = "^2.32.3"
boto3 = "^1.35.17"
torch = "^2.4.1"
transformers = "^4.44.2"
pandas = "^2.2.2"
keras = "^3.5.0"
tensorflow = "^2.17.0"
konlpy = "^0.6.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
